Fix Media Queries on mobile

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -179,6 +179,7 @@ a:hover {
 
 /* Media Queries */
 
+/* Fix smaller desktop display */
 @media only screen and (max-width: 858px) {
     #profile img {
         height: 150px;
@@ -198,12 +199,21 @@ a:hover {
     
 }
 
+/* Tablet */
+
 @media only screen and (max-width: 742px) {
+    
+    header ul li {
+        margin: 10px;
+    }
+
     #work {
         top: 20%;
     }
 
 }
+
+/* Larger Mobile or smaller tablet */
 
 @media only screen and (max-width: 695px) {
     header {
@@ -237,6 +247,8 @@ a:hover {
     
 }
 
+/* Mobile */
+
 @media only screen and (max-width: 480px) {
 
     #profile img {
@@ -244,16 +256,12 @@ a:hover {
     }
 
     #work #list-section .list {
-        width: 40%;
+        flex: 1 0 50%;
     }
     
 }
 
 @media only screen and (max-width: 432px) {
-
-    #work #list-section .list {
-        width: 35%;
-    }
 
     #profile {
         width: 90%;
